--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
     <script src="js/contact.js"></script>
     <script src="assets/templates/contact_template.js"></script>
     <script src="assets/templates/board_template.js"></script>
-    <title>Contact us | Join</title>
+    <title>Contact | Join</title>
 </head>
 
 <body onload="initContact()" ; onclick="closeLogoutMenu()">
