--- a/contact.html
+++ b/contact.html
@@ -40,13 +40,13 @@
                     <h1 class="contact-header">Contacts</h1>
                     <div class="contact-header-seperator"></div>
                     <h2 class="contact-header-slogan">Better with a team</h2>
+                    <button onclick="deleteContacts()" type="submit" class="contact-add-btn d-none"
+                        title="delete contact">
+                        <p>Delete (TEST)</p>
+                    </button>
                 </div>
                 <div id="contactSelection"></div>
-                <!-- "Add Contact"-Form -->
                 <div id="formContainer"></div>
-                <div id="formEditContainer"></div>
-                <div id="formTaskContainer"></div>
-                
             </section>
             <button onclick="showContactForm()" title="add contact" class="contact-add-btn contact-btn-position"
                 id="contact-add-btn">
