--- a/contact.html
+++ b/contact.html
@@ -40,10 +40,6 @@
                     <h1 class="contact-header">Contacts</h1>
                     <div class="contact-header-seperator"></div>
                     <h2 class="contact-header-slogan">Better with a team</h2>
-                    <button onclick="deleteContacts()" type="submit" class="contact-add-btn d-none"
-                        title="delete contact">
-                        <p>Delete (TEST)</p>
-                    </button>
                 </div>
                 <div id="contactSelection"></div>
                 <div id="formContainer"></div>
@@ -68,7 +64,7 @@
             <div class="contact-input-container margin-top">
                 <div onclick="closeAddContactForm()" class="icon-top-right" title="close form">
                     <img class="contact-cancel-icon" src="./assets/img/contact-cancel-icon.svg" alt="#">
-                    <img class="contact-cancel-icon-mobile hide-content" src="assets/img/x_ixon.png" alt="">
+                    <img class="contact-cancel-icon-mobile hide-content" src="assets/img/x_icon.png" alt="">
                 </div>
                 <form onsubmit="addContacts(); return false;">
                     <div class="form-group">
