--- a/board.html
+++ b/board.html
@@ -43,7 +43,7 @@
             <div class="splits">
                 <div class="splits-head">
                     <h3>To Do</h3>
-                    <div class="add_plus" onclick="openAddTask()">+</div>
+                    <div class="add_plus" onclick="openAddTask('to_do')">+</div>
                 </div>
                 <div class="drop-ground" id="to_do">
                 </div>
@@ -51,21 +51,21 @@
             <div class="splits">
                 <div class="splits-head">
                     <h3>In Progress</h3>
-                    <div class="add_plus" onclick="openAddTask()">+</div>
+                    <div class="add_plus" onclick="openAddTask('in_progress')">+</div>
                 </div>
                 <div class="drop-ground" id="in_progress"></div>
             </div>
             <div class="splits">
                 <div class="splits-head">
                     <h3>Awaiting Feedback</h3>
-                    <div class="add_plus" onclick="openAddTask()">+</div>
+                    <div class="add_plus" onclick="openAddTask('awaiting_feedback')">+</div>
                 </div>
                 <div class="drop-ground" id="awaiting_feedback"></div>
             </div>
             <div class="splits">
                 <div class="splits-head">
                     <h3>Done</h3>
-                    <div class="add_plus" onclick="openAddTask()">+</div>
+                    <div class="add_plus" onclick="openAddTask('done')">+</div>
                 </div>
                 <div class="drop-ground" id="done"></div>
             </div>
@@ -74,6 +74,7 @@
     <div class="board-bottom"></div>
     <div id="popUp">
     </div>
+
 </body>
 
 </html>
