--- a/summary.html
+++ b/summary.html
@@ -55,7 +55,7 @@
                     </a>
                     <a class="nav-to-content" href="board.html">
                         <span id="countInProgress" class="counter"></span>
-                        <span class="counter-title">Tasks in Pregress</span>
+                        <span class="counter-title">Tasks in Progress</span>
                     </a>
                     <a class="nav-to-content" href="board.html">
                         <span id="countAwaitFeedback" class="counter"></span>
