--- a/contact.html
+++ b/contact.html
@@ -30,12 +30,11 @@
             <!-- Content - left side -->
             <section class="contact-list-container" id="hide-contacts">
                 <div>
-                    <!-- <div id="firstLetter"></div> -->
                     <div id="contactList"></div>
                 </div>
             </section>
             <!-- Content - right side -->
-            <section id="contactOverlay" class="contact-selection-container contact-selection-overlay">
+            <section id="contactOverlay" class="contact-selection-container contact-selection-overlay edit-contact">
                 <div class="contact-header-container">
                     <h1 class="contact-header">Contacts</h1>
                     <div class="contact-header-seperator"></div>
@@ -52,47 +51,49 @@
         </main>
     </div>
 
-    <div id="contactForm" class="contact-form-overlay contact-form-overlay-position d-none">
-        <div class="contact-form-left">
-            <img class="contact-form-logo" src="./assets/img/Logo-Join.png" alt="#">
-            <span class="contact-form-heading">Add Contact</span>
-            <p class="contact-form-slogan">Tasks are better with a team!</p>
-            <img class="contact-form-underline" src="assets/img/underline.svg" alt="">
-        </div>
-        <div class="contact-form-right">
-            <img class="contact-form-user-icon" src="./assets/img/contact-user-icon.svg">
-            <div class="contact-input-container margin-top">
-                <div onclick="closeAddContactForm()" class="icon-top-right" title="close form">
-                    <img class="contact-cancel-icon" src="./assets/img/contact-cancel-icon.svg" alt="#">
-                    <img class="contact-cancel-icon-mobile hide-content" src="assets/img/x_icon.png" alt="">
-                </div>
-                <form onsubmit="addContacts(); return false;">
-                    <div class="form-group">
-                        <input class="contact-input-field input-name-img" type="text" placeholder="First Name" id="firstName" name="firstName" required>
-                    </div>
-                    <div class="form-group">
-                        <input class="contact-input-field input-name-img" type="text" placeholder="Last Name" id="lastName" name="lastName" required>
-                    </div>
-                    <div class="form-group">
-                        <input class="contact-input-field input-email-img" type="email" placeholder="Email" id="email" name="email" required>
-                    </div>
-                    <div class="form-group">
-                        <input class="contact-input-field input-phone-img" type="tel" placeholder="Phone"
-                            id="phone" name="phone" required>
-                    </div>
-                    <div class="form-group color-picker">
-                        <input class="p-none" type="color" id="color" name="color" value="#29ABE2" required>
-                    </div>
-                    <div class="form-group btn-centered">
-                        <button type="submit" class="contact-add-btn">
-                            <p>Create Contact</p>
-                            <img class="contact-create-icon" src="./assets/img/contact-create-icon.svg"
-                                alt="#">
-                        </button>
-                    </div>
-                </form>
+        <div id="contactForm" class="contact-form-overlay contact-form-overlay-position edit-contact d-none">
+            <div class="contact-form-left">
+                <img class="contact-form-logo" src="./assets/img/Logo-Join.png" alt="#">
+                <span class="contact-form-heading">Add Contact</span>
+                <p class="contact-form-slogan">Tasks are better with a team!</p>
+                <img class="contact-form-underline" src="assets/img/underline.svg" alt="">
             </div>
-        </div>
+            <div class="contact-form-right">
+                <img class="contact-form-user-icon" src="./assets/img/contact-user-icon.svg">
+                <div class="contact-input-container margin-top">
+                    <div class="icon-top-right" title="close form">
+                        <img class="contact-cancel-icon" src="./assets/img/contact-cancel-icon.svg" alt="#"  onclick="closeAddContactForm()" >
+                        <img class="contact-cancel-icon-mobile hide-content" src="assets/img/x_ixon.png" alt="" onclick="closeAddContactForm()">
+                    </div>
+                    <form onsubmit="addContacts(); return false;">
+                        <div class="form-group">
+                            <input class="contact-input-field input-name-img" type="text" placeholder="First Name"
+                                id="firstName" name="firstName" required>
+                        </div>
+                        <div class="form-group">
+                            <input class="contact-input-field input-name-img" type="text" placeholder="Last Name"
+                                id="lastName" name="lastName" required>
+                        </div>
+                        <div class="form-group">
+                            <input class="contact-input-field input-email-img" type="email" placeholder="Email"
+                                id="email" name="email" required>
+                        </div>
+                        <div class="form-group">
+                            <input class="contact-input-field input-phone-img" type="tel" placeholder="Phone" id="phone"
+                                name="phone" pattern="[+0-9\s]+" required>
+                        </div>
+                        <div class="form-group color-picker">
+                            <input class="p-none" type="color" id="color" name="color" value="#000000" required>
+                        </div>
+                        <div class="form-group btn-centered">
+                            <button type="submit" class="contact-add-btn">
+                                <p>Create Contact</p>
+                                <img class="contact-create-icon" src="./assets/img/contact-create-icon.svg" alt="#">
+                            </button>
+                        </div>
+                    </form>
+                </div>
+            </div>
 </body>
 
 </html>
