--- a/add_task.html
+++ b/add_task.html
@@ -6,7 +6,7 @@
     <script src="js/mini_backend.js"></script>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="assets/img/join_logo.svg">
+    <link rel="icon" type="image/x-icon" href="assets/img/join-logo.svg">
     <link rel="stylesheet" href="css/header_nav.css">
     <link rel="stylesheet" href="css/add_task.css">
     <link rel="stylesheet" href="assets/fonts/fonts.css">
@@ -53,10 +53,10 @@
                         </div>
                         <div class="select-wrapper"  id="select-wrapper"  onclick="openDropdown('category-choices')">
                             <div class="sector_top">
-                                <p id="category-header">Select your Category</p><img src="./assets/img/arrow_down.png">
+                                <p id="category-header">Select your Category</p><img src="./assets/img/arrow-down.png">
                             </div>
                             <div class="category-choices d-none" id="category-choices">
-                                <div class="category" onclick="openAddNewCategory('category-choices')">New Category<img class="new-category-img" src="assets/img/add_task_mob.svg"></div>
+                                <div class="category" onclick="openAddNewCategory('category-choices')">New Category<img class="new-category-img" src="assets/img/add-task-mob.svg"></div>
                                 <div class="category" onclick="changeCategoryHeader('Marketing')">
                                     <div id="marketing">Marketing </div>
                                     <div class="circle" style="background: #0038ff;"></div>
@@ -85,7 +85,7 @@
                         <div class="select-wrapper assigned-to-wrapper">
                             <div class="sector_top" onclick="openDropdown('assigned-to-choices')">
                                 <p id="assigned-to-header">Select your Members</p><img
-                                    src="./assets/img/arrow_down.png">
+                                    src="./assets/img/arrow-down.png">
                             </div>
                             <div class="assigned-to-choices d-none" id="assigned-to-choices">
                                 <div class="assigned-to" onclick="changeCategoryHeader('Marketing')">
@@ -124,17 +124,17 @@
                             <input type="radio" class="checkbox_urgen" id="urgentBtn" name="radio">
                             <label for="urgentBtn" class="prio-btn prio-urgent urgentSection" for="checkbox_urgen"
                                 id="urgentSection">
-                                Urgent<img id="prioUrgentWhite" src="assets/img/Prio-urgent.png">
+                                Urgent<img id="prioUrgentWhite" src="assets/img/prio-urgent.png">
                             </label>
                             <input type="radio" class="checkbox_medium" id="mediumBtn" name="radio">
                             <label for="mediumBtn" class="prio-btn prio-urgent mediumSection" for="checkbox_urgen"
                                 id="mediumSection">
-                                Medium<img id="prioUrgentWhite" src="assets/img/Prio-medium.png">
+                                Medium<img id="prioUrgentWhite" src="assets/img/prio-medium.png">
                             </label>
                             <input type="radio" class="checkbox_low" id="lowBtn" name="radio" checked>
                             <label for="lowBtn" class="prio-btn prio-urgent lowSection" for="checkbox_urgen"
                                 id="lowSection">
-                                Low<img id="prioUrgentWhite" src="assets/img/Prio-low-white.png">
+                                Low<img id="prioUrgentWhite" src="assets/img/prio-low-white.png">
                             </label>
                         </div>
                         <div class="features-container">
@@ -143,9 +143,9 @@
                                 <input class="subtask-input" onclick="inputChangeSubIcons()"placeholder="Add new subtask" id="subtask">
                                 <img id="plusSubtaskImg" class="plus-icon" src="assets/img/plus-icon.png" onclick="changeSubIcon()">
                                 <div class="subtask-img-container">
-                                <img id="clearSubtaskImg" src="assets/img/icon_cancel_subtask.svg" onclick="clearSubtask()" class="subtask-icons d-none">
+                                <img id="clearSubtaskImg" src="assets/img/icon-cancel-subtask.svg" onclick="clearSubtask()" class="subtask-icons d-none">
                                 <div class="gap-img-subtask"></div>
-                                <img id="addSubtaskImg" src="assets/img/icon_check_subtask.svg" onclick="addSubtask()" class="subtask-icons d-none">
+                                <img id="addSubtaskImg" src="assets/img/icon-check-subtask.svg" onclick="addSubtask()" class="subtask-icons d-none">
                                 </div>
                             </div>
                             <div>
@@ -155,10 +155,10 @@
                         </div>
                     </div>
                     <div class="submit-and-clear">
-                        <div class="btn-clear" onclick="clearAll()">Clear<img class="clear-img" src ="assets/img/iconoir_cancel.svg"></div>
-                        <div><Button class="btn-createTask">Create Task<img src ="assets/img/akar-icons_check.svg"></Button></div>
+                        <div class="btn-clear" onclick="clearAll()">Clear<img class="clear-img" src ="assets/img/iconoir-cancel.svg"></div>
+                        <div><Button class="btn-createTask">Create Task<img src ="assets/img/akar-icons-check.svg"></Button></div>
                     </div>
-                    <button  class="add-task-mobile d-none"><img src="assets/img/add_task_btn_mob.svg" alt="Create task button"></button>
+                    <button  class="add-task-mobile d-none"><img src="assets/img/add-task-btn-mob.svg" alt="Create task button"></button>
                 </div>
             </div>
         </form>
