--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="assets/img/join_logo.svg">
+    <link rel="icon" type="image/x-icon" href="assets/img/join-logo.svg">
     <link rel="stylesheet" href="css/contact.css">
     <link rel="stylesheet" href="assets/fonts/fonts.css">
     <link rel="stylesheet" href="css/header_nav.css">
@@ -46,13 +46,13 @@
             <button onclick="showContactForm()" title="add contact" class="contact-add-btn contact-btn-position"
                 id="contact-add-btn">
                 <p>New Contact</p>
-                <img class="contact-btn-icon" src="./assets/img/add_contact.svg" alt="#">
+                <img class="contact-btn-icon" src="./assets/img/add-contact.svg" alt="#">
             </button>
         </main>
     </div>
         <div id="contactForm" class="contact-form-overlay contact-form-overlay-position edit-contact d-none">
             <div class="contact-form-left">
-                <img class="contact-form-logo" src="./assets/img/Logo-Join.png" alt="#">
+                <img class="contact-form-logo" src="./assets/img/logo-join.png" alt="#">
                 <span class="contact-form-heading">Add Contact</span>
                 <p class="contact-form-slogan">Tasks are better with a team!</p>
                 <img class="contact-form-underline" src="assets/img/underline.svg" alt="">
@@ -62,7 +62,7 @@
                 <div class="contact-input-container margin-top">
                     <div class="icon-top-right" title="close form">
                         <img class="contact-cancel-icon" src="./assets/img/contact-cancel-icon.svg" alt="#"  onclick="closeAddContactForm()" >
-                        <img class="contact-cancel-icon-mobile hide-content" src="assets/img/x_ixon.png" alt="" onclick="closeAddContactForm()">
+                        <img class="contact-cancel-icon-mobile hide-content" src="assets/img/x-icon.png" alt="#" onclick="closeAddContactForm()">
                     </div>
                     <form onsubmit="addContacts(); return false;">
                         <div class="form-group">
