--- a/forgot_password.html
+++ b/forgot_password.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="assets/img/join_logo.svg">
+    <link rel="icon" type="image/x-icon" href="assets/img/join-logo.svg">
     <link rel="stylesheet" href="assets/fonts/fonts.css">
     <link rel="stylesheet" href="css/login.css">
     <script src="js/login.js"></script>
@@ -17,11 +17,11 @@
     <div class="start-bg">
         <div class="content" id="forgot-pw-page">
             <form class="forgot-pw-page standard-box" onsubmit="emailSent(); return false;">
-                <a class="back-img back-img-forgot-pw" href="index.html"><img src="assets/img/arrow_left.svg" alt="back-img" onclick="backToLogin()"></a>
-                <a class="back-img-forgot-pw-mobile d-none"  href="index.html"><img src="assets/img/arrow_left_mob.svg" alt=""></a>
+                <a class="back-img back-img-forgot-pw" href="index.html"><img src="assets/img/arrow-left.svg" alt="back-img" onclick="backToLogin()"></a>
+                <a class="back-img-forgot-pw-mobile d-none"  href="index.html"><img src="assets/img/arrow-left-mob.svg" alt=""></a>
                 <span class="heading-span heading-span-forgot-pw">I forgot my password</span>
                 <img class="underline" src="assets/img/underline.svg" alt="underline">
-                <img class="underline-mobile d-none" src="assets/img/log_in_underline_mob.svg" alt="">
+                <img class="underline-mobile d-none" src="assets/img/log-in-underline-mob.svg" alt="">
                 <span class="span-font" id="forgot-pw-span">
                     Don't worry! We will send you an email with the instructions to
                     reset your password.
@@ -31,7 +31,7 @@
                 autocomplete="off" required>
                 <button type="submit" class="send-email-btn btn-font send-email-btn-font" type="submit">Send me the email</button>
             </form>
-            <img  class="d-none" id="email-sent-text" src="assets/img/sent_message_info.svg" alt="email sent">
+            <img  class="d-none" id="email-sent-text" src="assets/img/sent-message-info.svg" alt="email sent">
         </div>
     </div>   
 </body>
