--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="assets/img/join_logo.svg">
+    <link rel="icon" type="image/x-icon" href="assets/img/join-logo.svg">
     <link rel="stylesheet" href="assets/fonts/fonts.css">
     <link rel="stylesheet" href="css/login.css">
     <script src="js/data.js"></script>
@@ -15,10 +15,10 @@
 </head>
 
 <body onload="loadUsers(), checkRememberMeData(), animationMobileStop()">
-    <img class="join-logo logo-animation" src="assets/img/join_logo.svg" alt="join-logo">
+    <img class="join-logo logo-animation" src="assets/img/join-logo.svg" alt="join-logo">
     <img class="d-none bg-mobile-animation" src="assets/img/bg-mobile.svg" alt="">
     <!-- Start-Page! -->
-    <img class="d-none" id="animation-mobile" src="assets/img/animation_mobile.svg" alt="animation mobile">
+    <img class="d-none" id="animation-mobile" src="assets/img/animation-mobile.svg" alt="animation mobile">
         <div class="start-bg start-bg-mobile">
             <div class="content" id="login-page">
                 <div class="sign-up">
@@ -30,7 +30,7 @@
                     <span class="msg-box d-none" id="invalid-login">Invalid email or password!</span>
                     <span class="msg-box d-none" id="guest-login-text">Logged-In as guest!</span>
                     <img src="assets/img/underline.svg" alt="underline" class="underline" id="hide-underline">
-                    <img src="assets/img/log_in_underline_mob.svg" alt="underline-mobile"
+                    <img src="assets/img/log-in-underline-mob.svg" alt="underline-mobile"
                         class="underline-mobile d-none">
                     <input class="input-email-pw input-email-img" type="email" name="email" placeholder="Email"
                         id="email" required>
