--- a/legal_notice.html
+++ b/legal_notice.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="assets/img/join_logo.svg">
+    <link rel="icon" type="image/x-icon" href="assets/img/join-logo.svg">
     <link rel="stylesheet" href="assets/fonts/fonts.css">
     <link rel="stylesheet" href="css/header_nav.css">
     <link rel="stylesheet" href="css/legal_notice.css">
@@ -29,10 +29,9 @@
                 <div id="contactList"></div>
             </div>
         </section>
-
-        <a class="arrow-left arrow-left-legal-notice" href="summary.html"><img src="assets/img/arrow_left.svg"
+        <a class="arrow-left arrow-left-legal-notice" href="summary.html"><img src="assets/img/arrow-left.svg"
                 alt="arrow-back"></a>
-        <a class="arrow-left-mobile d-none" href="summary.html"><img src="assets/img/arrow_left_mob.svg" alt=""></a>
+        <a class="arrow-left-mobile d-none" href="summary.html"><img src="assets/img/arrow-left-mob.svg" alt=""></a>
         <div class="headline-mobile d-none width">Kanban Project Management Tool</div>
         <div class="main-content">
             <h1>Legal Notice</h1>
@@ -58,13 +57,6 @@
                 <p>Sie können sich jederzeit mit einer Beschwerde an eine Aufsichtsbehörde wenden, z. B. an die
                     zuständige Aufsichtsbehörde des Bundeslands Ihres Wohnsitzes oder an die für uns als verantwortliche
                     Stelle zuständige Behörde.</p>
-                <!-- <div class="link" >
-                    <p>Eine Liste der Aufsichtsbehörden (für den nichtöffentlichen Bereich) mit Anschrift finden Sie
-                        unter: <a href="https://www.bfdi.bund.de/DE/Service/Anschriften/Laender/Laender-node.html"
-                            target="_blank"
-                            rel="noopener nofollow">https://www.bfdi.bund.de/DE/Service/Anschriften/Laender/Laender-node.html</a>.
-                    </p>
-                </div> -->
                 <p></p>
                 <h2>Erfassung allgemeiner Informationen beim Besuch unserer Website</h2>
                 <h3>Art und Zweck der Verarbeitung:</h3>
@@ -167,7 +159,6 @@
                 <p><em>Die Datenschutzerklärung wurde mithilfe der activeMind AG erstellt, den Experten für <a
                             href="https://www.activemind.de/datenschutz/datenschutzbeauftragter/" target="_blank"
                             rel="noopener">externe Datenschutzbeauftragte</a> (Version #2020-09-30).</em></p>
-
             </div>
             <div>
                 <h2>Subtitle</h2>
