--- a/reset_password.html
+++ b/reset_password.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="assets/img/join_logo.svg">
+    <link rel="icon" type="image/x-icon" href="assets/img/join-logo.svg">
     <link rel="stylesheet" href="assets/fonts/fonts.css">
     <link rel="stylesheet" href="css/login.css">
     <script src="js/login.js"></script>
@@ -12,16 +12,16 @@
     <script src="js/mini_backend.js"></script>
     <title>Reset Password | Join</title>
 </head>
-<body onload="loadUsers()">
 
+<body onload="loadUsers()">
     <div class="start-bg">
         <div class="content" id="reset-pw-page">
             <form class="standard-box reset-pw-page" onsubmit="setNewPassword(); return false;">
-                <a href="forgot_password.html"><img class="back-img" src="assets/img/arrow_left.svg" alt="go back"></a>
-                <a href="forgot_password.html"><img class="back-img-reset-pw-mob d-none" src="assets/img/arrow_left_mob.svg" alt="go back"></a>
+                <a href="forgot_password.html"><img class="back-img" src="assets/img/arrow-left.svg" alt="go back"></a>
+                <a href="forgot_password.html"><img class="back-img-reset-pw-mob d-none" src="assets/img/arrow-left-mob.svg" alt="go back"></a>
                 <span class="heading-span">Reset your password</span>
                 <img class="underline" src="assets/img/underline.svg" alt="underline">
-                <img class="underline-mobile d-none" src="assets/img/log_in_underline_mob.svg" alt="">
+                <img class="underline-mobile d-none" src="assets/img/log-in-underline-mob.svg" alt="">
                 <span class="span-font" id="reset-pw-span">Change your account password</span>
                 <span class="msg-box d-none" id="reset-pw-message">Password doesn't match! Please try again.</span>
                 <input class="input-email-pw" type="password" name="password" placeholder="New password" id="new-password" autocomplete="off" required>
@@ -31,7 +31,6 @@
             </form>
         </div>
     </div>
-
-    
 </body>
+
 </html>
