--- a/sign_up.html
+++ b/sign_up.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="assets/img/join_logo.svg">
+    <link rel="icon" type="image/x-icon" href="assets/img/join-logo.svg">
     <link rel="stylesheet" href="assets/fonts/fonts.css">
     <link rel="stylesheet" href="css/login.css">
     <script src="js/sign_up.js"></script>
@@ -15,18 +15,18 @@
 </head>
 
 <body onload="loadUsers()">
-    <img class="join-logo logo-animation" src="assets/img/join_logo.svg" alt="joing-logo">
+    <img class="join-logo logo-animation" src="assets/img/join-logo.svg" alt="joing-logo">
     <!-- Sign-up page! -->
     <div class="start-bg">
         <div class="content" id="sign-up-page">
             <form class="sign-up-page standard-box" onsubmit="addUser(); return false;">
-                <img class="back-img back-img-web" src="assets/img/arrow_left.svg" alt="back-img"
+                <img class="back-img back-img-web" src="assets/img/arrow-left.svg" alt="back-img"
                     onclick="location.href='index.html'">
-                <img class="back-img d-none back-img-sign-up-mobile" src="assets/img/arrow_left_mob.svg" alt="back-img_mob"
+                <img class="back-img d-none back-img-sign-up-mobile" src="assets/img/arrow-left-mob.svg" alt="back-img_mob"
                     onclick="location.href='index.html'">
                 <span class="heading-span">Sign up</span>
                 <img src="assets/img/underline.svg" alt="underline" class="underline"  id="hide-underline">
-                <img src="assets/img/log_in_underline_mob.svg" alt="underline" class="underline-mobile d-none">
+                <img src="assets/img/log-in-underline-mob.svg" alt="underline" class="underline-mobile d-none">
                 <span class="d-none msg-box" id="msg-box"></span>
                 <input class="input-name-img input-email-pw" placeholder="Name" id="name" required>
                 <input class="input-email-img input-email-pw" type="email" name="email" placeholder="Email" id="email"
