--- a/board.html
+++ b/board.html
@@ -6,7 +6,7 @@
     <script src="js/mini_backend.js"></script>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="assets/img/join_logo.svg">
+    <link rel="icon" type="image/x-icon" href="assets/img/join-logo.svg">
     <link rel="stylesheet" href="css/header_nav.css">
     <link rel="stylesheet" href="css/board.css">
     <link rel="stylesheet" href="css/board_add_task.css">
@@ -27,7 +27,7 @@
             <div class="headline-mobile d-none">Kanban Project Management Tool</div>
             <div class="board-add-task">
                 <h2>Board</h2>
-                <img onclick="openAddTask()" class="add-task-btn-mobile hide-content" src="assets/img/add_task_mob.svg" alt="">
+                <img onclick="openAddTask()" class="add-task-btn-mobile hide-content" src="assets/img/add-task-mob.svg" alt="">
             </div>
             <div class="search-container">
                 <div class="search-box"><input type="text" placeholder="Find Task" onkeyup="findTasks()" id="findTask">
