--- a/help.html
+++ b/help.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="assets/img/join_logo.svg">
+    <link rel="icon" type="image/x-icon" href="assets/img/join-logo.svg">
     <link rel="stylesheet" href="assets/fonts/fonts.css">
     <link rel="stylesheet" href="css/header_nav.css">
     <link rel="stylesheet" href="css/help.css">
@@ -29,8 +29,8 @@
                 <div id="contactList"></div>
             </div>
         </section>
-        <a class="arrow-left"  href="summary.html"><img src="assets/img/arrow_left.svg" alt="arrow-back"></a>
-        <a class="arrow-left-mob d-none" href="summary.html"><img src="assets/img/arrow_left_mob.svg" alt="arrow-back"></a>
+        <a class="arrow-left"  href="summary.html"><img src="assets/img/arrow-left.svg" alt="arrow-back"></a>
+        <a class="arrow-left-mob d-none" href="summary.html"><img src="assets/img/arrow-left-mob.svg" alt="arrow-back"></a>
         <div class="main-content">
             <div class="headline-mobile d-none">Kanban Project Management Tool</div>
             <h1>Help</h1>
