--- a/add_task.html
+++ b/add_task.html
@@ -21,7 +21,7 @@
 <body onload="init()" ; onclick="closeLogoutMenu()">
     <!--Header + Nav Templates-->
     <div w3-include-html="assets/templates/header.html"></div>
-    <div w3-include-html="assets/templates/nav.html"></div>
+    <div w3-include-html="assets/templates/nav/active_task.html"></div>
     <!--Main Content-->
     <div class="main-container">
         <div class="title-container">
