--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
 <body onload="initContact()" ; onclick="closeLogoutMenu()">
     <!-- Header + Nav Templates> -->
     <div w3-include-html="assets/templates/header.html"></div>
-    <div w3-include-html="assets/templates/nav.html"></div>
+    <div w3-include-html="assets/templates/nav/active_contact.html"></div>
     <!-- Main Content -->
     <div class="overflow">
         <main class="contacts-main-container">
