--- a/legal_notice.html
+++ b/legal_notice.html
@@ -19,7 +19,7 @@
 <body onload="init()" ; onclick="closeLogoutMenu()">
     <!-- Header + Nav Templates> -->
     <div w3-include-html="assets/templates/header.html"></div>
-    <div w3-include-html="assets/templates/nav.html"></div>
+    <div w3-include-html="assets/templates/nav/active_legal.html"></div>
     <!-- Main Content -->
     <main class="contacts-main-container">
         <!-- Content - left side -->
