--- a/summary.html
+++ b/summary.html
@@ -18,7 +18,7 @@
 <body onload="initSummary(), deletOverDiv()" ; onclick="closeLogoutMenu()">
     <!--Header + Nav Templates-->
     <div w3-include-html="assets/templates/header.html"></div>
-    <div w3-include-html="assets/templates/nav.html"></div>
+    <div w3-include-html="assets/templates/nav/active_summary.html"></div>
     <div id="overDivMobile"></div>
     <!--Greet-Mobile-->
     <div id="greetMobileCont" class="greet-container-mobile d-none">
