--- a/board.html
+++ b/board.html
@@ -20,8 +20,10 @@
 </head>
 
 <body onload="init()" ; onclick="closeLogoutMenu()">
+    <!--Header + Nav Templates-->
     <div w3-include-html="assets/templates/header.html"></div>
-    <div w3-include-html="assets/templates/nav.html"></div>
+    <div w3-include-html="assets/templates/nav/active_board.html"></div>
+    <!--Main Content-->
     <div class="board-section" id="board-section">
         <div class="board-header">
             <div class="headline-mobile d-none">Kanban Project Management Tool</div>
