--- a/legal_notice.html
+++ b/legal_notice.html
@@ -38,7 +38,7 @@
             <div class="text-container">
                 <p>Verantwortlicher im Sinne der Datenschutzgesetze, insbesondere der EU-Datenschutzgrundverordnung
                     (DSGVO), ist:</p>
-                <p>Peil Alexander</p>
+                <p>P. Kieber</p>
                 <h2>Ihre Betroffenenrechte</h2>
                 <p>Unter den angegebenen Kontaktdaten unseres Datenschutzbeauftragten können Sie jederzeit folgende
                     Rechte ausüben:</p>
@@ -145,7 +145,7 @@
                     Interessen, Rechte und Freiheiten überwiegen, oder die Verarbeitung dient der Geltendmachung,
                     Ausübung oder Verteidigung von Rechtsansprüchen.</p>
                 <h3>Empfänger eines Widerspruchs</h3>
-                <p>Peil Alexander</p>
+                <p>P. Kieber</p>
                 <hr>
                 <h2>Änderung unserer Datenschutzbestimmungen</h2>
                 <p>Wir behalten uns vor, diese Datenschutzerklärung anzupassen, damit sie stets den aktuellen
@@ -159,12 +159,6 @@
                 <p><em>Die Datenschutzerklärung wurde mithilfe der activeMind AG erstellt, den Experten für <a
                             href="https://www.activemind.de/datenschutz/datenschutzbeauftragter/" target="_blank"
                             rel="noopener">externe Datenschutzbeauftragte</a> (Version #2020-09-30).</em></p>
-            </div>
-            <div>
-                <h2>Subtitle</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi dignissimos consequuntur hic, maxime
-                    sapiente in illo alias laborum! Facere harum impedit ea odio distinctio eligendi doloremque commodi
-                    asperiores, suscipit dicta.</p>
             </div>
         </div>
 
